# advent

./: .gitignore
2020/: 1.ipynb  11.ipynb  12.ipynb  13.ipynb  14.ipynb  15.ipynb  18.ipynb  19.ipynb  2.ipynb  21-new.ipynb  21.ipynb  23.ipynb  24.ipynb  25.ipynb  3.ipynb  6.ipynb  8.ipynb  9.ipynb
2020/.ipynb_checkpoints/: 1-checkpoint.ipynb  10-checkpoint.ipynb  (+15 more)
2021/: 10.ipynb  12.ipynb  14.ipynb  15.ipynb  16.ipynb  17.ipynb  19.ipynb  2.ipynb  20.ipynb  21.ipynb  22.ipynb  23.ipynb  24.ipynb  4.ipynb  5.ipynb  6.ipynb  7.ipynb  8 reddit.ipynb  8-networkx.ipynb  9.ipynb  cuboid testing.ipynb  rectangle testing.ipynb  segment testing.ipynb
2022/: 1.ipynb  10.ipynb  11.ipynb  12.ipynb  13.ipynb  14.ipynb  15.ipynb  16.ipynb  17.ipynb  18.ipynb  19 copy.ipynb  19.ipynb  2.ipynb  20.ipynb  21.ipynb  22.ipynb  23.ipynb  24.ipynb  25.ipynb  3.ipynb  4.ipynb  5.ipynb  6.ipynb  7.ipynb  8.ipynb  9.ipynb
2023/: 1.ipynb  10.ipynb  11.ipynb  12.ipynb  13.ipynb  14.ipynb  15.ipynb  16.ipynb  17.ipynb  18 copy 2.ipynb  18 copy 4.ipynb  18 copy.ipynb  18.ipynb  19.ipynb  2.ipynb  20.ipynb  21.ipynb  22.ipynb  23.ipynb  24.ipynb  25.ipynb  3.ipynb  4.ipynb  5 copy.ipynb  5.ipynb  6.ipynb  7.ipynb  8.ipynb  9.ipynb  crt.ipynb  hello.py  pyproject.toml
2024/: 1.ipynb  10.ipynb  11.ipynb  12.ipynb  13.ipynb  14.ipynb  15.ipynb  16.ipynb  17.ipynb  18.ipynb  19.ipynb  2.ipynb  20.ipynb  21 copy 2.ipynb  21 copy 3.ipynb  21 copy.ipynb  21.ipynb  22.ipynb  23.ipynb  24.ipynb  25.ipynb  3.ipynb  4.ipynb  5.ipynb  6.ipynb  7.ipynb  8.ipynb  9.ipynb  pyproject.toml
(+23 files in other folders)
